[gd_scene load_steps=22 format=3 uid="uid://b5svn4ckkcyjg"]

[ext_resource type="Script" path="res://Scripts/Enemies/NormalEnemyStats.gd" id="1_kwpan"]
[ext_resource type="AudioStream" uid="uid://c71jkj6qpoi7y" path="res://Audio/male_hurt7-48124.mp3" id="2_06dkd"]
[ext_resource type="Script" path="res://Scripts/enemyaim.gd" id="3_thvkc"]
[ext_resource type="Script" path="res://Scripts/Enemies/NormalEnemyBullet.gd" id="4_lpk0s"]
[ext_resource type="AudioStream" uid="uid://dn3jy3omvh7ui" path="res://Audio/9mm-pistol-shoot-short-reverb-7152.mp3" id="5_sonmf"]
[ext_resource type="Script" path="res://Scripts/VisionLine.gd" id="6_awdis"]
[ext_resource type="Texture2D" uid="uid://spo00g3wpoxp" path="res://Assets/Effects/HoverParticles.png" id="7_deus3"]
[ext_resource type="Texture2D" uid="uid://dltaxv525wxed" path="res://Assets/Robot_Base_Render.png" id="8_0xwpr"]
[ext_resource type="AudioStream" uid="uid://cx8hgyhxyqju6" path="res://Audio/cut.mp3" id="9_5mf0k"]
[ext_resource type="AudioStream" uid="uid://chcxpvaououh5" path="res://Audio/punch.mp3" id="10_vl6g8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y21y5"]
size = Vector2(715.969, 375.125)

[sub_resource type="CircleShape2D" id="CircleShape2D_t860l"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p83or"]
radius = 4.44943

[sub_resource type="AtlasTexture" id="AtlasTexture_ersph"]
atlas = ExtResource("7_deus3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6awy"]
atlas = ExtResource("7_deus3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_txdcs"]
atlas = ExtResource("7_deus3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_quhq5"]
atlas = ExtResource("7_deus3")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_joorh"]
atlas = ExtResource("7_deus3")
region = Rect2(0, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxa6k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ersph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6awy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txdcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quhq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joorh")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_0xwpr")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [],
"loop": true,
"name": &"meleeing",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_0xwpr")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rly2m"]
radius = 19.0263

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxf4s"]
size = Vector2(9, 63)

[node name="EnemyBase" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 33
collision_mask = 35
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_kwpan")

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_06dkd")
volume_db = -2.721
pitch_scale = 0.96

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource("RectangleShape2D_y21y5")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_t860l")

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 4.71239
script = ExtResource("3_thvkc")

[node name="EnemyBullet" type="Area2D" parent="RayCast2D"]
script = ExtResource("4_lpk0s")
speed = 500
damage = 10
projectile = true

[node name="Gunshot" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
rotation = 1.5708
stream = ExtResource("5_sonmf")
volume_db = -15.767
pitch_scale = 0.87

[node name="Hit" type="AudioStreamPlayer2D" parent="RayCast2D/EnemyBullet"]
stream = ExtResource("2_06dkd")
volume_db = 0.627
pitch_scale = 0.8

[node name="VisionLine" type="RayCast2D" parent="RayCast2D/EnemyBullet"]
target_position = Vector2(164, -0.000158358)
script = ExtResource("6_awdis")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.00593, 1.00182)
shape = SubResource("CircleShape2D_p83or")

[node name="Firerate" type="Timer" parent="RayCast2D/EnemyBullet"]
wait_time = 0.3

[node name="BulletPoint" type="Node2D" parent="RayCast2D/EnemyBullet"]
position = Vector2(25, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="RayCast2D"]
self_modulate = Color(0.831112, 2.98411e-06, 1.05888e-06, 1)
texture_filter = 1
position = Vector2(-4.76837e-07, 0.0742424)
rotation = 1.5708
scale = Vector2(0.053106, 0.0878674)
sprite_frames = SubResource("SpriteFrames_pxa6k")
animation = &"run"

[node name="Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_rly2m")

[node name="Cut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_5mf0k")
volume_db = -5.754

[node name="Punch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_vl6g8")
volume_db = 4.0
pitch_scale = 1.5

[node name="EnemyMelee" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyMelee"]
shape = SubResource("RectangleShape2D_cxf4s")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="EnemyMelee"]
stream = ExtResource("9_5mf0k")

[connection signal="dead2" from="." to="RayCast2D" method="_on_criminal_dead_2"]
[connection signal="body_entered" from="Sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_sight_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="RayCast2D/EnemyBullet" to="RayCast2D/EnemyBullet" method="_on_body_entered"]
[connection signal="novision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_novision"]
[connection signal="vision" from="RayCast2D/EnemyBullet/VisionLine" to="RayCast2D/EnemyBullet" method="_on_vision_line_vision"]
[connection signal="timeout" from="RayCast2D/EnemyBullet/Firerate" to="RayCast2D/EnemyBullet" method="_on_firerate_timeout"]
[connection signal="area_entered" from="Attack" to="." method="_on_attack_area_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="EnemyMelee" to="." method="_on_enemy_melee_body_entered"]
